--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@netlify/plugin-nextjs": "^5.14.4",
         "next": "^16.0.1",
         "postcss": "^8.5.6",
         "react": "^19.2.0",
